bug fix on small device

--- a/style/components/minesweeper.css
+++ b/style/components/minesweeper.css
@@ -111,3 +111,9 @@ table #minesweeper td {
   }
 
 }
+
+@media (max-height: 750px) {
+  #show-minesweeper {
+    transform: translateY(56px);
+  }
+}
